Final update for demo page

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ lambda = diag(D);
 kid = 1;
 kernel = mysgwt_func(kid);
 option.c1 =0.01; <span class="comment">% step size</span>
-option.gamma = 2; <span class="comment">% sparsity parmeter`</span>
+option.gamma = 2; <span class="comment">% sparsity parmeter</span>
 option.s0 = .2;  <span class="comment">% intial point</span>
 option.tol = 1e-5; <span class="comment">% tolerance</span>
 option.niter = 20000; <span class="comment">% number of iteration</span>
